# textAnalyzer

./: .gitignore  .gitmodules  README.rst  pyproject.toml  requirements.txt  test.py
koreanfacts/: __main__.py  api.py
koreanfacts/db/: dokdo.json  east_sea.json  holiday.json  japanese_colonial_period.json  old_history.json
text_analyzer/: analyzer.py  analyzer_backup.py  coreference.py  corenlp_api.py  named_entity_type.py  options.py  string_utils.py  test_cases.py
text_comparison/: checking.py  comparison.py  number.py  options.py  sentence_comp.py  test.txt  timex.py  utils.py
