[tool.poetry]
name = "textanalyzer"
version = "0.1.0"
description = ""
authors = ["sqrtpi177 <solar0037@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
nltk = "^3.5"
neuralcoref = "^4.0"
spacy = "2.1.0"
tensorflow_hub = "0.10.0"
numpy = "1.18.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
